# HuaQing-Code

./: README.md
C_language/C_example_100/1/: 1
C_language/C_example_100/11/: 11  11.c
C_language/C_example_100/12/: 12  12.c
C_language/C_example_100/13/: 13  13.c
C_language/C_example_100/14/: 14  14.c
C_language/C_example_100/15/: 15  15.c
C_language/C_example_100/16/: 16  16.c
C_language/C_example_100/17/: 17  17.c
C_language/C_example_100/18/: 18  18.c
C_language/C_example_100/19/: 19  19.c
C_language/C_example_100/2/: 2  2.c
C_language/C_example_100/3/: 3  3.c
Data_structure/BinaryTree/: binarytree  binarytree.c
Data_structure/queue/: cir_queue  cir_queue.c  queue  queue.c  sequeue  sequeue.c
Data_structure/stack/: linkstack.c  stack  stack.c
Linux基础/1/: 1.c
Linux基础/IO_1/: CMakeLists.txt  a.c  cp.c  fopen.c
Linux基础/IO_2/: CMakeLists.txt  open.c
Linux基础/Shell_1/: ip.sh  ip.txt
Linux基础/makefile/: 脚本第二天.txt
network/network_1_2/: 1.txt  CMakeLists.txt  client.c  server.c  tcp_client.c  tcp_fork.c  tcp_server.c  udp_client.c  udp_server.c
network/network_1_2/chatroom/: client.c
network/network_3/: CMakeLists.txt
network/network_4/: CMakeLists.txt  epoll.c  tcp_select.c  test.c  udp_select.c
network/network_5/: CMakeLists.txt  client  client.c  my_dict.h  server  server.c  user.db
person/: apeu.h  mynet.h
system_programming/IO_1/: b.c  fread.c  open.c  time.c
system_programming/IO_2/: my_mkdir.c  open.txt  read_copy.c
system_programming/process_1/: CMakeLists.txt  exec.c  exit.c  fork.c  getpid.c  hello  hello.c  wait.c  waitpid.c
system_programming/process_2/: 1.txt  CMakeLists.txt  daemon.c  main_thread.c  mutex.c  pthread.c  pthread_mutex.c  sem.c  thread_cancel.c  thread_exit.c  thread_join.c  thread_kill.c  函數.txt
system_programming/process_3/: CMakeLists.txt  mkfifo_read.c  mkfifo_write.c  mykill.c  pipe.c  sigset.c  thread_cond.c
system_programming/process_4/: CMakeLists.txt  function.txt  msg.c  msg_rcv.c  msg_send.c  shm.c  shm_rcv.c  shm_send.c  shmat_rcv.c  shmat_snd.c
system_programming/process_5/: CMakeLists.txt  kaoshi.c  mysem.c  test.c
system_transplant/led/: Makefile  led_gpio.dis
(+46 files in other folders)
